Add:主机游戏平台

--- a/superbeeClash.ini
+++ b/superbeeClash.ini
@@ -18,6 +18,7 @@ ruleset=Ⓜ️ 微软服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_sc
 ruleset=🍎 苹果服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Apple/Apple.list
 ruleset=📲 电报信息,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Telegram/Telegram.list
 ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/GlobalMedia/GlobalMedia.list
+ruleset=🎮 主机服务,https://github.com/biruxuan/superbeeClash/blob/main/consoleGame.list
 ruleset=🎮 游戏服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Game/Game.list
 ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/PrivateTracker/PrivateTracker.list
 ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/LM-Firefly/Rules@master/PROXY.list
@@ -37,6 +38,7 @@ custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`.*
 custom_proxy_group=Ⓜ️ OneDrive`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
+custom_proxy_group=🎮 主机服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🎮 游戏服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
